--- a/hello-world-war/pom.xml
+++ b/hello-world-war/pom.xml
@@ -1,17 +1,12 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
-         http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<build>
+    <finalName>hello-world</finalName>
 
-    <modelVersion>4.0.0</modelVersion>
+    <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-war-plugin</artifactId>
+            <version>3.4.0</version>
+        </plugin>
+    </plugins>
 
-    <groupId>com.example</groupId>
-    <artifactId>hello-world-war</artifactId>
-    <version>1.0.0</version>
-    <packaging>war</packaging>
-
-    <build>
-        <finalName>hello-world</finalName>
-    </build>
-
-</project>
+</build>
